istio-ingress/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: public-gateway
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "lth.so"
        - "*.lth.so"
        - "*.s3.lth.so"
        - "tunnel.lth.so"
        - "*.tunnel.lth.so"
        - "*.coder.lth.so"
        - "limtaehyun.dev"
        - "*.limtaehyun.dev"

    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "lth.so"
        - "*.lth.so"
        - "*.s3.lth.so"
        - "tunnel.lth.so"
        - "*.tunnel.lth.so"
        - "*.coder.lth.so"
        - "limtaehyun.dev"
        - "*.limtaehyun.dev"
      tls:
        mode: SIMPLE
        credentialName: lth-tls
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
        cipherSuites:
          - ECDHE-ECDSA-AES256-GCM-SHA384
          - ECDHE-ECDSA-CHACHA20-POLY1305

    - port:
        number: 22
        name: tcp-ssh
        protocol: TCP
      hosts:
        - "*"
